fix-overflow-global

--- a/wp-content/themes/mihsa/assets/css/custom.scss
+++ b/wp-content/themes/mihsa/assets/css/custom.scss
@@ -143,7 +143,7 @@ textarea {
 * {
 	margin: 0;
 	padding: 0;
-	;
+	box-sizing: border-box;
 }
 body {
 	max-width: 100vw;
